2000-07-19  Akim Demaille  <akim@epita.fr>

	Warnings related to obsolete constructs should be properly
	classified.

	* acspecific.m4 (AC_RSH, AC_USG, AC_MEMORY_H, AC_DIR_HEADER,
	AC_INT_16_BITS, AC_LONG_64_BITS, AC_STRUCT_ST_BLKSIZE,
	AC_STRUCT_ST_RDEV, AC_HAVE_POUNDBANG, AC_ARG_ARRAY): Use
	`AC_DIAGNOSE(obsolete, ...)' instead of `AC_WARNING'.

2000-07-19  Akim Demaille  <akim@epita.fr>

	autoconf -W error does not work.

	* acgeneral.m4 (_AC_DIAGNOSE): use _AC_WARNING_IFELSE,
	_AC_WARNING_ENABLE is dead.

2000-07-19  Akim Demaille  <akim@epita.fr>

	Martin Wilck found a Fortran 77 compiler which always exits with
	success.

	* acgeneral.m4 (AC_COMPILE_IFELSE): Also check that the output
	file was created and is nonempty.

2000-07-19  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Introduction): More about CVS, Gnats, the web
	pages, and the mailing lists.

2000-07-19  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Prerequisite Macros): Dedocument AC_PROVIDE.
	(Coding Style): Move some into...
	(Macro Definitions): here.

2000-07-19  Akim Demaille  <akim@epita.fr>

	The --help message should have paragraphs starting with a title,
	the options, and then optionally a small paragraph.

	* acgeneral.m4 (AC_DIVERT_ONCE): New macro.
	(HELP_VAR_END): New diversion.
	(AC_ARG_ENABLE, AC_ARG_WITH, AC_ARG_VAR): Use AC_DIVERT_ONCE.
	(AC_ARG_VAR): Follow the --help style.
	* acspecific.m4 (AC_PATH_X): Use AC_DIVERT_ONCE.

2000-07-19  Akim Demaille  <akim@epita.fr>

	* aclang.m4 (AC_PROG_CC): Don't require AC_PROG_F77, require
	AC_PROG_CC instead.
	From Martin Wilck.
	(AC_PROG_F77_C_O): Require AC_PROG_F77.
	Use a cache variable independent of $F77.

2000-07-19  Akim Demaille  <akim@epita.fr>

	* autoreconf.sh: Accept --symbolic and -s.

2000-07-19  Akim Demaille  <akim@epita.fr>

	Make it clear that the regular user does not need --macrodir.
	In fact, rename this option as -A, --autoconf-dir.

	* autoconf.sh: Complain when -m, --macrodir is used.